--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,36 @@
     </dependencies>
   </dependencyManagement>
 
+  <distributionManagement>
+    <repository>
+      <id>central</id>
+      <name>dfebc32ff717-releases</name>
+      <url>http://docker-reg.emotibot.com.cn:8081/artifactory/libs-release-local</url>
+    </repository>
+    <snapshotRepository>
+      <id>snapshots</id>
+      <name>dfebc32ff717-snapshots</name>
+      <url>http://docker-reg.emotibot.com.cn:8081/artifactory/libs-snapshot-local</url>
+    </snapshotRepository>
+  </distributionManagement>
+
+  <repositories>
+    <repository>
+      <id>EmotibotRepoSnapshot</id>
+      <url>http://docker-reg.emotibot.com.cn:8081/artifactory/libs-snapshot-local</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>EmotibotRepoRelease</id>
+      <url>http://docker-reg.emotibot.com.cn:8081/artifactory/libs-release-local</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+    </repository>
+  </repositories>
+
   <build>
     <plugins>
       <plugin>
