--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,5 @@
 stages:
-  - "检查dockerfile"
   - "maven deploy"
-
-check_dockerfile:
-  stage: "检查dockerfile"
-  before_script:
-    - echo "start to check dockerfile ..."
-    - pwd
-    - export
-  script:
-    - bash /home/deployer/auto_development/dccheck.sh ./docker/Dockerfile
-  after_script:
-    - echo "check dockerfile finished !"
-  tags:
-    - emotibot-dependencies
-  allow_failure: true
 
 build_dockerfile:
   stage: "maven deploy"
@@ -26,5 +11,5 @@ build_dockerfile:
   after_script:
     - echo "deployment finished"
   tags:
-    - emotibot-dependencies
+    - epilogue-dependencies
   allow_failure: true
